--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,5 @@
-.noto-sans-kr-pubfont {
-  font-family: "Noto Sans KR", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: normal;
-
-}
+.noto-sans-kr-500 {
+    font-family: "Noto Sans KR", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+  }
